Checkout 3 add health monitoring and alerts middleware

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -120,6 +120,21 @@ spring.cloud.gateway.routes[10].filters[0].name=CircuitBreaker
 spring.cloud.gateway.routes[10].filters[0].args.name=myServiceCircuitBreaker
 spring.cloud.gateway.routes[10].filters[0].args.fallbackUri=forward:/fallback
 
+spring.cloud.gateway.routes[11].id=user-health
+spring.cloud.gateway.routes[11].uri=lb://user-service
+spring.cloud.gateway.routes[11].predicates[0]=Path=/user/health
+spring.cloud.gateway.routes[11].filters[0].name=CircuitBreaker
+spring.cloud.gateway.routes[11].filters[0].args.name=myServiceCircuitBreaker
+spring.cloud.gateway.routes[11].filters[0].args.fallbackUri=forward:/fallback
+
+
+spring.cloud.gateway.routes[12].id=cooking-blog-service
+spring.cloud.gateway.routes[12].uri=lb://cooking-blog-service
+spring.cloud.gateway.routes[12].predicates[0]=Path=/blog/health
+spring.cloud.gateway.routes[12].filters[0].name=CircuitBreaker
+spring.cloud.gateway.routes[12].filters[0].args.name=myServiceCircuitBreaker
+spring.cloud.gateway.routes[12].filters[0].args.fallbackUri=forward:/fallback
+
 
 # Retry Settings
 spring.cloud.gateway.default-filters[0].name=Retry
