--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -31,9 +31,10 @@ server.port=8080
 eureka.client.service-url.defaultZone=http://my-service-discovery-app:8761/eureka/
 
 
-# Load Balancer Timeouts
+## Load Balancer Timeouts
 spring.cloud.loadbalancer.service-discovery.timeout=5000
-spring.cloud.loadbalancer.retry.enabled=true
+#spring.cloud.loadbalancer.retry.enabled=true
+spring.cloud.gateway.filter.circuit-breaker.enabled=true
 
 # Enable Round Robin load balancing
 spring.cloud.loadbalancer.hint.user-service=round_robin
@@ -136,14 +137,13 @@ spring.cloud.gateway.routes[12].filters[0].args.name=myServiceCircuitBreaker
 spring.cloud.gateway.routes[12].filters[0].args.fallbackUri=forward:/fallback
 
 
-# Retry Settings
+# Retry Settings for CircuitBreakerRegistry
 spring.cloud.gateway.default-filters[0].name=Retry
-spring.cloud.gateway.default-filters[0].args.retries=3
+spring.cloud.gateway.default-filters[0].args.retries=9
 spring.cloud.gateway.default-filters[0].args.methods=GET,POST,PUT,DELETE
 spring.cloud.gateway.default-filters[0].args.statuses=TOO_MANY_REQUESTS,INTERNAL_SERVER_ERROR,SERVICE_UNAVAILABLE
 spring.cloud.gateway.default-filters[0].args.exceptions=java.lang.Throwable
 
-#GATEWAY_TIMEOUT
 # Health check endpoint for load balancing
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
@@ -151,11 +151,11 @@ management.health.circuitbreakers.enabled=true
 
 
 # Circuit breaker settings using Resilience4j
-resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.slidingWindowSize=3
+resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.slidingWindowSize=12
 resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.failureRateThreshold=100
 resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.waitDurationInOpenState=10s
-resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=1
-resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.minimumNumberOfCalls=3
+resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.minimumNumberOfCalls=12
 resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
 resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.slidingWindowType=COUNT_BASED
 
