Initial Prometheus and Grafana setup

--- a/CookingBlogService/CookingBlogService/appsettings.json
+++ b/CookingBlogService/CookingBlogService/appsettings.json
@@ -18,7 +18,8 @@
       "leaseExpirationDurationInSeconds": 10
     },
     "Instance": {
-      "AppName": "cooking-blog-service"
+      "AppName": "cooking-blog-service",
+      "StatusPageUrlPath": "/metrics"
     }
   },
   "AllowedHosts": "*"
