--- a/CookingBlogService/CookingBlogService/CookingBlogService.csproj
+++ b/CookingBlogService/CookingBlogService/CookingBlogService.csproj
@@ -23,6 +23,7 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.8" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
         <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="3.2.8" />
         <PackageReference Include="Steeltoe.Discovery.Eureka" Version="3.2.8" />
