--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,6 +164,33 @@ services:
     networks:
       - app-network
 
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/monitoring/prometheus/prometheus.yml:z
+    command:
+      - '--config.file=/etc/monitoring/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
+    networks:
+      - app-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - ./monitoring/datasources:/etc/monitoring/datasources
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
