--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -145,7 +145,7 @@ spring.cloud.gateway.default-filters[0].args.statuses=TOO_MANY_REQUESTS,INTERNAL
 spring.cloud.gateway.default-filters[0].args.exceptions=java.lang.Throwable
 
 # Health check endpoint for load balancing
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
 
@@ -175,3 +175,7 @@ spring.cache.type=redis
 spring.data.redis.host=my-redis-db
 spring.data.redis.port=6379
 spring.cache.redis.time-to-live=3600s
+
+# Prometheus Configuration
+management.endpoint.prometheus.enabled=true
+management.endpoint.health.show-components=always
